# libuv

./: .travis.yml  CMakeLists.txt  appveyor.yml
.github/workflows/: CI.yml  sanitizer.yml
cmake/: Config.cmake.in
cmake/template/: Config.cmake.in
docs/code/dns/: main.c
docs/src/: fs.rst  migration_010_100.rst  stream.rst  udp.rst
include/: uv-unix.h  uv-win.h  uv.h  uv_ssize_t.h
include/uv/: tree.h  unix.h  uv_ssize_t.h  win.h
samples/socks5-proxy/: defs.h
src/: strscpy.c  strscpy.h  uv-data-getter-setters.c
src/unix/: async.c  core.c  freebsd.c  fs.c  haiku.c  internal.h  linux-core.c  linux-inotify.c  linux-syscalls.c  linux-syscalls.h  os390-syscalls.c  os390-syscalls.h  process.c  procfs-exepath.c  random-devurandom.c  random-getrandom.c  stream.c  sunos.c  udp.c
src/win/: fs.c
test/: benchmark-multi-accept.c  benchmark-ping-udp.c  benchmark-pound.c  benchmark-pump.c  benchmark-udp-pummel.c  blackhole-server.c  dns-server.c  echo-server.c  run-tests.c  runner-unix.c  test-callback-stack.c  test-close-fd.c  test-delayed-accept.c  test-fork.c  test-fs.c  test-getsockname.c  test-ipc-heavy-traffic-deadlock-bug.c  test-ipc-send-recv.c  test-ipc.c  test-not-readable-nor-writable-on-read-error.c  test-not-readable-on-eof.c  test-ping-pong.c  test-pipe-close-stdout-read-stdin.c  test-pipe-set-non-blocking.c  test-shutdown-eof.c  test-shutdown-simultaneous.c  test-spawn.c  test-stdio-over-pipes.c  test-tcp-alloc-cb-fail.c  test-tcp-close-accept.c  test-tcp-close-reset.c  test-tcp-oob.c  test-tcp-open.c  test-tcp-read-stop-start.c  test-tcp-write-to-half-open-connection.c  test-tcp-writealot.c  test-tty-duplicate-key.c  test-tty.c  test-udp-alloc-cb-fail.c  test-udp-connect.c  (+10 more)
